tests/ui/traits/ambiguous-trait-matching-distinct-lifetimes.stderr
error[E0283]: type annotations needed: cannot satisfy `&'a T: Foo`
  --> $DIR/ambiguous-trait-matching-distinct-lifetimes.rs:13:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
   |
note: multiple `impl`s or `where` clauses satisfying `&'a T: Foo` found
  --> $DIR/ambiguous-trait-matching-distinct-lifetimes.rs:13:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
LL |           &'b T : Foo
   |                   ^^^

error[E0283]: type annotations needed: cannot satisfy `&T: Foo`
  --> $DIR/ambiguous-trait-matching-distinct-lifetimes.rs:16:7
   |
LL |     x.foo();
   |       ^^^
   |
note: multiple `impl`s or `where` clauses satisfying `&T: Foo` found
  --> $DIR/ambiguous-trait-matching-distinct-lifetimes.rs:13:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
LL |           &'b T : Foo
   |                   ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
